--- a/public/style.css
+++ b/public/style.css
@@ -1,28 +1,65 @@
 table {
-    font-family: 'Open Sans', sans-serif;
-    width: 750px;
-    border-collapse: collapse;
-    border: 3px solid #44475C;
-    margin: 10px 10px 0 10px;
-  }
-  
-  table th {
-    text-transform: uppercase;
-    text-align: left;
-    background: #44475C;
-    color: #FFF;
-    padding: 8px;
-    min-width: 30px;
-  }
-  
-  table td {
-    text-align: left;
-    padding: 8px;
-    border-right: 2px solid #7D82A8;
-  }
-  table td:last-child {
-    border-right: none;
-  }
-  table tbody tr:nth-child(2n) td {
-    background: #D4D8F9;
-  }
+  font-family: 'Open Sans', sans-serif;
+  width: 750px;
+  border-collapse: collapse;
+  border: 3px solid #44475C;
+  margin: 10px 10px 0 10px;
+}
+
+table th {
+  text-transform: uppercase;
+  text-align: left;
+  background: #44475C;
+  color: #FFF;
+  padding: 8px;
+  min-width: 30px;
+}
+
+table td {
+  text-align: left;
+  padding: 8px;
+  border-right: 2px solid #7D82A8;
+}
+
+table td:last-child {
+  border-right: none;
+}
+
+table tbody tr:nth-child(2n) td {
+  background: #D4D8F9;
+}
+
+button {
+  background-color: #555555;
+  /* Black */
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+input{
+  width: 10%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+button:hover {
+  background-color: #444444;
+  /* Green */
+  color: white;
+}
+
+h1{
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.movieInfo{
+  position: relative;
+  left: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 20px;
+}
