--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+
 table {
   font-family: 'Open Sans', sans-serif;
   width: 750px;
@@ -57,9 +58,9 @@ h1{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.movieInfo{
-  position: relative;
-  left: 30px;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
+.imageDiv{
+  float: none;
+}
+.infoTable{
+  float: left;
 }
