--- a/public/style.css
+++ b/public/style.css
@@ -1,10 +1,17 @@
-
 table {
   font-family: 'Open Sans', sans-serif;
   width: 750px;
   border-collapse: collapse;
   border: 3px solid #44475C;
   margin: 10px 10px 0 10px;
+}
+
+img {
+
+  width: 203px;
+  height: 316px;
+
+  background:"error.png" no-repeat;
 }
 
 table th {
@@ -41,7 +48,8 @@ button {
   display: inline-block;
   font-size: 16px;
 }
-input{
+
+input {
   width: 10%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -54,13 +62,26 @@ button:hover {
   color: white;
 }
 
-h1{
+h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.imageDiv{
-  float: none;
-}
-.infoTable{
+.imageDiv {
   float: left;
+  padding-top: 20px;
+}
+
+.infoTable {
+  margin-left: 20px;
+  float: left;
+  clear: both;
+}
+
+.movieInfo {
+
+    padding-top: 50px;
+    padding-right: 30px;
+    padding-bottom: 50px;
+    padding-left: 80px;
+
 }
